# ultra-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/ultra/: LiveContextWindow.md  YouTubeTranscription.md
src/ultra/: __init__.py  app.py  audio.py  cli.py  config.py  context_editor.py  context_manager.py  context_window.py  create_doc.py  image.py  logging_config.py  meta.py  opener.py  pdf.py  providers.py  text_templates.py  transcribe.py  utils.py
src/ultra/transcript/: _7yuo6JRexY.docx  ~$yuo6JRexY.docx
src/ultra_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
