[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra-cli"
version = "0.1.0"
description = "A CLI tool to interact with multiple LLM providers."
authors = [
  { name="John Shaff", email="john@shaff.co" }
]
license = "MIT"
dependencies = [
  "rich",
  "requests",
  "openai",
  "textual",
  "pyperclip"
]
keywords = ["chatbot", "cli", "llm"]
classifiers = [
  "Programming Language :: Python :: 3.10.10",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ultra"]

[project.scripts]
ultra = "ultra.cli:main"