[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra-cli"
version = "0.1.0"
description = "A CLI tool to interact with multiple LLM providers."
authors = [
  { name="John Shaff", email="john@shaff.co" }
]
license = "MIT"
dependencies = [
  "rich>=13.0.0",
  "requests>=2.28.0",
  "openai>=1.0.0",
  "nltk>=3.8.1",
  "pyqt6>=6.4.0",
  "yt-dlp>=2023.7.6",
  "python-docx>=0.8.11",
  "fpdf>=1.7.2",
  "pickle-mixin>=1.0.2"
]
keywords = ["chatbot", "cli", "llm"]
classifiers = [
  "Programming Language :: Python :: 3.10.10",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ultra"]

[project.scripts]
ultra = "ultra.cli:main"